<resources>
    <string name="app_name">TippyCal</string>
    <string name="base_amount">Base Amount</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="made_with_by_kaylayshi">Made with ❤ ️by Kaylayshi</string>
    <string name="tip_percent_label_text">%d %%</string>
    <string name="string_format">%.2f</string>
</resources>