<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--  Label views  -->

    <TextView
        android:id="@+id/tvBaseAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/base_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTipPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"

        app:layout_constraintEnd_toEndOf="@+id/tvBaseAmountLabel"
        app:layout_constraintTop_toBottomOf="@id/tvBaseAmountLabel"
        tools:text="24%" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tip"
        app:layout_constraintEnd_toEndOf="@+id/tvTipPercentLabel"
        app:layout_constraintTop_toBottomOf="@id/tvTipPercentLabel" />

    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="@+id/tvTipLabel"
        app:layout_constraintTop_toBottomOf="@id/tvTipLabel" />

    <!--  interactive section  -->


    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:autofillHints="@null"
        android:ems="8"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvBaseAmountLabel"
        app:layout_constraintStart_toEndOf="@id/tvBaseAmountLabel" />

    <SeekBar
        android:id="@+id/sbPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipPercentLabel"
        app:layout_constraintEnd_toEndOf="@id/etBaseAmount"
        app:layout_constraintStart_toStartOf="@id/etBaseAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTipPercentLabel" />

    <TextView
        android:id="@+id/tvTipDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/sbPercent"
        app:layout_constraintStart_toStartOf="@id/sbPercent"
        app:layout_constraintTop_toBottomOf="@id/sbPercent"
        tools:text="Acceptable" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipLabel"
        app:layout_constraintStart_toStartOf="@+id/sbPercent"
        app:layout_constraintTop_toTopOf="@+id/tvTipLabel"
        tools:text="19.96" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalLabel"
        app:layout_constraintStart_toStartOf="@+id/tvTipAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTotalLabel"
        tools:text="103.11" />


    <!--   Footer -->

    <TextView
        android:id="@+id/signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/made_with_by_kaylayshi"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>